# shoppinglist-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  deploy  shoppinglist.db  shoppinglist.db-shm  shoppinglist.db-wal
.cargo/: config.toml
migrations/: 20220123181741_items.down.sql  20220123181741_items.up.sql
src/: main.rs
src/shopping_list/: mod.rs  model.rs  routes.rs
