[package]
name = "shoppinglist-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
sqlx = { version = "0.6.0", features = [ "runtime-actix-native-tls", "sqlite" ] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
chrono = "0.4"
nanoid = "0.4"
openssl = { version = "0.10", features = ["vendored"] }

# TODO Add OpenAPI generator via https://github.com/paperclip-rs/paperclip or https://github.com/juhaku/utoipa